# GaussianWorldModel

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: train_gwm.yaml  train_vae.yaml
configs/dataset/: droid.yaml
configs/vae/: transformer.yaml
configs/world_model/: gwm.yaml
docs/: pretraining.md  troubleshooting.md
gaussianwm/: __init__.py  demo.py  gwm_predictor.py  train_diffusion.py  train_vae.py
gaussianwm/codecs/: imagecodecs_numcodecs.py
gaussianwm/diffusion/: denoiser.py  diffusion_sampler.py  models.py
gaussianwm/encoder/: models_ae.py  pointnet_extractor.py
gaussianwm/processor/: datasets.py  regressor.py  shapenet.py
gaussianwm/processor/rlds/: __init__.py  dataset.py  obs_transforms.py  traj_transforms.py
gaussianwm/processor/rlds/oxe/: __init__.py  configs.py  materialize.py  mixtures.py  transforms.py
gaussianwm/processor/rlds/oxe/utils/: droid_utils.py
gaussianwm/processor/rlds/utils/: data_utils.py  goal_relabeling.py  task_augmentation.py
gaussianwm/reward/: blocks.py  reward_model.py
gaussianwm/util/: distributed_utils.py  logging_utils.py  lr_utils.py  tensor_utils.py  timer_utils.py  video_metric.py
gaussianwm/vq_model/: __init__.py  compressive_vq_model.py  conditional_vae.py  discriminator.py  lpips.py  vae.py
scripts/: container_entrypoint.sh  setup_container.sh
scripts/pretrain/: dit.sh  vae.sh
