[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussianwm"
version = "0.1.0"
description = "Gaussian World Model (GWM) for 3D scene understanding and representation learning"
authors = [
    {name = "Guanxing Lu", email = "lgx23@mails.tsinghua.edu.cn"},
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy==1.26.4",
    "trimesh==4.6.4",
    "imageio==2.36.0",
    "imageio-ffmpeg==0.5.1",
    "opencv-python",
    "opencv-contrib-python",
    "open3d",
    "pyyaml",
    "h5py", 
    "pyrealsense2",
    "ipdb",
    "atomics",
    "gradio",
    "lightning==2.5.0.post0",
    "lpips==0.1.4",
    "viser",
    "plyfile",
    "einops",
    "omegaconf",
    "timm",
    "diffusers==0.32.2",
    "transformers==4.38.2",
    "hydra-core==1.3.2",
    "peft==0.10.0",
    "huggingface_hub==0.25",
    "wandb",
    "termcolor",
    "dotmap",
    "tensorflow",
    "tensorflow-datasets",
    "tensorflow-graphics",
    #"diff-gaussian-rasterization-modified @ git+https://github.com/dcharatan/diff-gaussian-rasterization-modified",
    #"pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git",
    "dlimp @ git+https://github.com/moojink/dlimp_openvla",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
keywords = ["World Model", "Gaussian Splatting", "Robotic Manipulation"]

[project.urls]
Homepage = "https://github.com/GuanxingLu/GaussianWorldModel"
Repository = "https://github.com/GuanxingLu/GaussianWorldModel"


[tool.setuptools]
package-dir = {"" = "."}
packages = ["gaussianwm"]

include-package-data = true

[tool.setuptools.package-data]
gaussianwm = [
    "third_party/splatt3r/checkpoints/splatt3r_v1.0/*.ckpt",
    "third_party/splatt3r/src/**/*.py",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources.torch]
index = "pytorch-cu121"
marker = "sys_platform == 'linux' or sys_platform == 'win32'"
[tool.uv.sources.torchvision]
index = "pytorch-cu121"
marker = "sys_platform == 'linux' or sys_platform == 'win32'"